--- a/templates/notice.html
+++ b/templates/notice.html
@@ -5,7 +5,7 @@
 <div class="mt-12 p-12 pt-1 flex flex-col items-center gap-5">
     <ul class="px-3 py-2 max-w-md flex flex-wrap justify-between items-center bg-amber-200 rounded-lg w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400">
         <li class="me-2 flex-1">
-            <a href="{% url 'notice:notice' %}?country=others" class="inline-block px-1 py-3  text-black w-full h-full {% if country != 'bd' %}. text-white bg-blue-600 rounded-lg active {% endif %}" aria-current="page">UBT notice korea</a>
+            <a href="{% url 'notice:notice' %}?country=other" class="inline-block px-1 py-3  text-black w-full h-full {% if country != 'bd' %}. text-white bg-blue-600 rounded-lg active {% endif %}" aria-current="page">UBT notice korea</a>
         </li>
         <li class="me-2 flex-1">
             <a href="{% url 'notice:notice' %}?country=bd"  class="inline-block px-1 py-3 rounded-lg w-full text-black {% if country == 'bd' %} text-white bg-blue-600 rounded-lg active {% endif %}">UBT notice Bangladesh</a>
