--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
           },
         },
       };
+
     </script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@@ -58,6 +59,7 @@
         flex: stretch;
         display: inline-block;
         border-radius: 12px;
+        border: gray solid;
       }
 
        #id_number_1{
@@ -66,6 +68,8 @@
         flex: stretch;
         display: inline-block;
         border-radius: 20px;
+        border: gray solid;
+        padding: 0 10px;
       }
 
      {% block extra_style %}
@@ -149,6 +153,13 @@
                     {% if request.session.lang == 'en' %}  Contact Us {% else %} যোগাযোগ করুন {% endif %}
                   </a>
                 </li>
+                <li>
+                  <a
+                    href="{% url 'notice:terms' %}"
+                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                    {% if request.session.lang == 'en' %}  Terms and Conditions {% else %} Terms and Conditions  {% endif %}
+                  </a>
+                </li>
                 <div class="divider md:hidden"></div>
                 <div class="lg ml-1 md:hidden">
                   <a href="/?lang=bn"
@@ -179,29 +190,57 @@
           </div>
           <div class="">
             {% if request.user.is_authenticated %}
-
             <div class="relative">
               <div tabindex="0" onclick="toggleHide('profile')" class="btn btn-ghost avatar flex items-center gap-1">
                 <div class="ring-primary ring-offset-base-100 w-8 rounded-full ring-offset-2 ring-1">
                   <img
-                    alt="USer image"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQt4EuKV5YxkN0cWzT2yBLL14LfU1nw7m05SCAW3MyQhg_yHRocBGmKgA_KwphuF7t0B_k&usqp=CAU" />
+                    alt="User image"
+                    src="{% if request.user.picture %}{{request.user.picture.url}}{% else %}https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQt4EuKV5YxkN0cWzT2yBLL14LfU1nw7m05SCAW3MyQhg_yHRocBGmKgA_KwphuF7t0B_k&usqp=CAU{%endif%}" />
                 </div>
                 <div><i class="fa-solid fa-angle-down"></i></div>
               </div>
+
+
+
+
+              <!--    User Profile      -->
               <ul
                 tabindex="0"
                 id="profile"
-                class="absolute right-5 top-12 hidden menu menu-sm bg-stone-200 rounded-b-md z-[1] mt-3 w-48 p-2 shadow text-2xl space-y-0">
-                <li><a> {{ request.user.fullname }}</a></li>
-                <li><a> {{ request.user.number }} </a></li>
+                class="absolute flex flex-col gap-1 right-5 top-12 hidden menu menu-sm bg-stone-200 rounded-b-md z-[1] mt-3 w-56 md:w-64 p-2 shadow text-2xl space-y-0">
+
+                <li class="relative">
+                    <img
+                      id="userPhoto"
+                      alt="User image"
+                      class="mb-3 px-5"
+                      src="{% if request.user.picture %}{{request.user.picture.url}}{% else %}https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQt4EuKV5YxkN0cWzT2yBLL14LfU1nw7m05SCAW3MyQhg_yHRocBGmKgA_KwphuF7t0B_k&usqp=CAU{%endif%}" />
+                </li>
+                <li>
+                  <form action="{% url 'customer:update' %}"
+                        method="post"  enctype="multipart/form-data"
+                        class="flex flex-col gap-1">
+                    {% csrf_token %}
+                    <input name="picture" type="file" class="file-input file-input-sm file-input-bordered file-input-primary w-full max-w-xs">
+                    <input name="name" type="text" class="w-full input input-sm py-0" value="{{ request.user.name }}">
+                    <input name="username" type="text" class="w-full input input-sm py-0" value="{{ request.user.username }}">
+                    <input type="submit" value="Update Profile" class="btn btn-sm btn-info">
+                  </form>
+                </li>
+
+
+                <li> <div class="w-full h-2px my-2 bg-amber-700"> </div></li>
+
+
                 <li><a href="{% url 'customer:reset' %}"
-                  class="py-1 mt-3 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
+                  class="py-1 mt-1 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
                   >
                   {% if request.session.lang == 'en' %} Reset Password {% else %} রিসেট পাসওয়ার্ড {% endif %}
-                </a></li>
+                  </a>
+
+                </li>
                 <li><a href="{% url 'customer:logout' %}"
-                  class="py-1 mt-3 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
+                  class="py-1 mt-0 flex justify-center px-2 bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200"
                   >
                   {% if request.session.lang == 'en' %} Log Out {% else %} লগ আউট {% endif %}
                 </a></li>
@@ -220,13 +259,12 @@
       <!-- navbar ends -->
     </header>
 
-
     <main class="mx-auto container px-2 mt-15 md:px-0 relative">
       <br>
 
-      <div class="top-64 fixed right-5 z-[10]">
+      <div class="bottom-16 md:top-64  fixed right-5 z-[10]">
         <button
-            class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg rounded-full p-2 flex gap-1 items-center"
+            class="bg-green-700 hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg rounded-full p-2 flex gap-1 items-center"
             onclick="contact_us_modal.showModal()"
             >
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
@@ -242,24 +280,23 @@
               </button
               >
             </form>
-            <!-- main content -->
             <div class="space-y-3">
               <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold">
               {% if request.session.lang == 'en' %} Ask Any Question {% else %} যেকোনো প্রশ্ন করুন {% endif %}
               </h3>
-              <a href="sms://+8801521771635&body=[I need help]"
+              <a href="sms://+8801977990405?body=I have a issue in your website." target="_blank"
               class="bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg rounded-lg p-2 flex gap-1 items-center justify-center w-full"
               ><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
               </svg>
-                {% if request.session.lang == 'en' %}   Chat With Us {% else %} মেসেজ ক্রুন {% endif %}
+                {% if request.session.lang == 'en' %}   Chat With Us {% else %} মেসেজ  {% endif %}
               </a>
-            <a href="https:wa.me/+8801521771635"
+            <a href="https:wa.me/+8801977990405"
               class="text-navbar-active hover:bg-navbar-hover border border-gray-700 transition-all ease-in-out duration-200 text-lg rounded-lg p-2 flex gap-1 items-center justify-center w-full font-semibold hover:text-white"
               ><i class="fa-brands text-2xl fa-whatsapp"></i>
               {% if request.session.lang == 'en' %}   Text in WhatsApp {% else %} হোয়াটস অ্যাপে মেসেজ দিন {% endif %}
             </a>
-            <a href="tel:+8801521771635"
+            <a href="tel:+8801977990405"
               class="text-navbar-active hover:bg-navbar-hover transition-all ease-in-out duration-200 text-lg rounded-lg p-2 flex gap-1 items-center justify-center w-full font-semibold hover:text-white"
               ><i class="text-2xl fa-solid fa-phone"></i>
               {% if request.session.lang == 'en' %}  Call Us {% else %} কল করুন {% endif %}
@@ -281,11 +318,13 @@
         <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold pt-10 pb-4">
           {% if request.session.lang == 'en' %}  Follow Us {% else %} আমাদের ফলো করুন {% endif %}
         </h3>
-        <div class="flex justify-center items-center gap-8">
-          <a href="#"><i class="text-4xl text-blue-600 fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="text-4xl text-red-700 fa-brands fa-youtube"></i></a>
-          <a href="#"><i class="text-4xl text-rose-900 fa-brands fa-instagram"></i></a>
-          <a href="#" class="bg-white rounded-lg"><i class="fa-brands text-4xl fa-x-twitter bg-state-500"></i></a>
+        <div class="flex justify-center items-center gap-4">
+          <a href="https://www.facebook.com/profile.php?id=61566610888313&mibextid=ZbWKwL"><i class="text-4xl text-blue-600 fa-brands fa-facebook"></i></a>
+          <a href="https://youtube.com/@vashaacademy?si=u9Rx_r03GJjpGw93"><i class="text-4xl text-red-700 fa-brands fa-youtube"></i></a>
+          <a href="https://www.instagram.com/vashaacademy?igsh=am1zOXV0NzNqdDNt"><i class="text-4xl text-rose-900 fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/vasha-academy/"><i class="text-4xl text-rose-900 fa-brands fa-linkedin"></i></a>
+          <a href="https://www.tiktok.com/@vasha.academy?_t=8qcY8A9vHcI&_r=1"><i class="text-4xl text-rose-900 fa-brands fa-tiktok"></i></a>
+          <a href="https://x.com/TeamVasha?t=6jvv6SAblls1NUIGiX4FcQ&s=09" class="bg-white rounded-lg"><i class="fa-brands text-4xl fa-x-twitter bg-state-500"></i></a>
         </div>
 
         <!-- contact us -->
@@ -294,16 +333,27 @@
         </h3>
         <div class="flex justify-center">
         <div class="space-y-3">
-          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="text-2xl text-blue-400 fa-solid fa-phone"></i><p class="text-primary-text/80">16780</p></div>
-          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="text-2xl text-yellow-600 fa-solid fa-message"></i></i><p class="text-primary-text/80">team@vashaacademy</p></div>
-          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg"><i class="fa-solid text-2xl text-green-700 fa-location-dot"></i><p class="text-primary-text/80">gulistan,dhaka,bd</p></div>
-        </div></div>
+          <a href="tel:+8801977990405" class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg">
+            <i class="text-2xl text-blue-400 fa-solid fa-phone"></i><p class="text-primary-text/80">+8801977990405</p>
+          </a>
+          <a href="mailto:team@vashaacademy.com" class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg">
+            <i class="text-2xl text-yellow-600 fa-solid fa-message"></i><p class="text-primary-text/80">team@vashaacademy.com</p>
+          </a>
+          <div class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg">
+            <i class="fa-solid text-2xl text-green-700 fa-location-dot"></i><p class="text-primary-text/80">Dhaka, Bangladesh</p>
+          </div>
+            <a href="https://m.me/61566610888313" target="_blank" class="flex gap-2 items-center bg-pink-900 p-2 rounded-lg">
+            <i class="fa-brands fa-facebook-messenger" style="color: #74C0FD;"></i><p class="text-primary-text/80">Chat on Messenger</p>
+          </a>
+        </div>
+        </div>
       </section>
       <section class="bg-neutral-900 py-8">
         <p class="text-center text-lg text-primary-text/70 mb-3">@VashaAcademy 2024 | All Rights Reserved</p>
-        <p class="text-center text-md text-primary-text/80">Developed by: <a href="mailto:saikatislam709@gmail.com" class="underline">Saikat Islam</a></p>
+        <p class="text-center text-md text-primary-text/80">Developed by: <a href="https://saikat709.github.io" class="underline">Saikat Islam</a></p>
       </section>
     </footer>
   </body>
-  <script src="{% static 'js/script.js' %}"></script>
+  <script src="{% static 'js/script_v1.js' %}"></script>
+
 </html>
