--- a/templates/login.html
+++ b/templates/login.html
@@ -16,53 +16,98 @@
         <div class="self-start hidden lg:flex flex-col  text-white">
           <img src="" class="mb-3">
           <h1 class="mb-3 font-bold text-5xl">Hi ? Welcome Back ... </h1>
-          <p class="pr-3">Lorem ipsum is placeholder text commonly used in the graphic, print,
-            and publishing industries for previewing layouts and visual mockups</p>
+          <p class="pr-3"> We are here to teach you different language. Stay with us.</p>
         </div>
       </div>
       <div class="flex justify-center self-center mt-8 p-5 mb-10 z-10">
-        <div class="p-6 bg-white mx-auto rounded-2xl w-101 z-[2]">
+        <div class="p-6 bg-white mx-auto rounded-2xl w-120 z-[2]">
             <div class="mb-2">
               <h3 class="font-semibold text-2xl text-gray-800">
                 {% if request.session.lang == 'en' %} Sign In {% else %} লগইন/ সাইন আপ {% endif %}
               </h3>
             </div>
-            <div class="space-y-2">
-                <form method="POST" action="{% url 'customer:login' %}">
+            <div class="space-y-2 md:mr-8">
+                <form method="POST" action="{% url 'customer:login' %}?is_email={{is_email}}">
                     {%  csrf_token %}
                     <div class="space-y-1">
-                        <label class="text-sm font-medium text-gray-700 tracking-wide">
-                           {% if request.session.lang == 'en' %}  Full Name {% else %} নাম {% endif %}
+<!--                        <label class="text-sm font-medium text-gray-700 tracking-wide">-->
+<!--                           {% if request.session.lang == 'en' %}  Full Name {% else %} নাম {% endif %}-->
+<!--                        </label>-->
+<!--                        <input name="name" required class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="text" placeholder="Enter name">-->
+                        <label class="input input-bordered flex items-center gap-2">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 16 16"
+                            fill="currentColor"
+                            class="h-4 w-4 opacity-70">
+                            <path
+                              d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
+                          </svg>
+                          <input type="text" name="name" class="grow" placeholder="{% if request.session.lang == 'en' %}  Full Name {% else %} নাম {% endif %}" />
                         </label>
-                        <input name="fullname" required class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="text" placeholder="Enter name">
+                    </div>
+                    <div class="space-y-1  py-3 mb-1">
+
+                        {% if is_email == True %}
+                            <label class="input input-bordered flex items-center gap-2">
+                              <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 16 16"
+                                fill="currentColor"
+                                class="h-4 w-4 opacity-70">
+                                <path
+                                  d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                                <path
+                                  d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+                              </svg>
+                              <input type="email" name="email" class="grow" placeholder="Email" />
+                            </label>
+                        {% else %}
+                            <label class="input input-bordered flex items-center gap-2">
+                              <p class="font-bold">+880</p>
+                              <input type="tel" maxlength="10" minlength="10"
+                                     oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                                     name="username" placeholder="Phone Number" />
+                            </label>
+                        {% endif %}
+                        <a href="{% url 'customer:login' %}?is_email={% if is_email == True %}false{% else %}true{% endif %}" class="text-sm text-info font-bold"> Use  {% if is_email == True %} phone number{% else %} email {% endif %} instead? </a>
+<!--                        <label class="text-sm font-medium text-gray-700 tracking-wide">-->
+<!--                          {% if request.session.lang == 'en' %} Mobile Number {% else %} মোবাইল নাম্বার {% endif %}-->
+<!--                        </label>-->
+<!--                         <input name="number" required class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="number" placeholder="+88017********">-->
+<!--                         <div class="flex flex-col  w-full gap-2  px-1 ">-->
+<!--                             <input name="number" type="tel" placeholder="+88017****" class="input input-bordered w-full max-w-xs" -->
+<!--                         </div>-->
                     </div>
                     <div class="space-y-1">
-                        <label class="text-sm font-medium text-gray-700 tracking-wide">
-                          {% if request.session.lang == 'en' %} Mobile Number {% else %} মোবাইল নাম্বার {% endif %}
+<!--                        <label class="mb-5 text-sm font-medium text-gray-700 tracking-wide">-->
+<!--                            {% if request.session.lang == 'en' %}   Password {% else %} পাসওয়ার্ড {% endif %}-->
+<!--                        </label>-->
+                        <label class="input input-bordered flex items-center gap-2">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 16 16"
+                            fill="currentColor"
+                            class="h-4 w-4 opacity-70">
+                            <path
+                              fill-rule="evenodd"
+                              d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                              clip-rule="evenodd" />
+                          </svg>
+                          <input type="password" name="password" class="grow" placeholder="Enter password carefully" />
                         </label>
-                        <input name="number" required class=" w-full text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="number" placeholder="+88017********">
-                         <div class="h-10 flex flex-row  w-full gap-2  px-5 ">
-                             {{ form.number }}
-                         </div>
-                </div>
-                    </div>
-                    <div class="space-y-1">
-                        <label class="mb-5 text-sm font-medium text-gray-700 tracking-wide">
-                            {% if request.session.lang == 'en' %}   Password {% else %} পাসওয়ার্ড {% endif %}
-                        </label>
-                        <input name="password" required class="w-full content-center text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="" placeholder="Enter your password">
+<!--                        <input name="password" required class="w-full content-center text-base px-4 py-2 border  border-gray-300 rounded-lg focus:outline-none focus:border-green-400" type="" placeholder="Enter your password">-->
                     </div>
                     <div class="flex items-center justify-between">
-                    <div class="text-sm  mt-3">
-                        <a href="#" class="text-red-900 hover:text-green-500">
-                          {% if request.session.lang == 'en' %} Forgot your password? {% else %} পাসওয়ার্ড ভুলে গেছেন? {% endif %}
-                        </a>
-                    </div>
+                        <div class="text-sm my-3 ">
+                            <a href="{% url 'customer:reset' %}" class="text-red-900 hover:text-green-500">
+                              {% if request.session.lang == 'en' %} Forgot your password? {% else %} পাসওয়ার্ড ভুলে গেছেন? {% endif %}
+                            </a>
+                        </div>
                    </div>
                     <button type="submit" class="w-full flex justify-center bg-green-400  hover:bg-green-500 text-gray-100 p-3 mt-2 rounded-full tracking-wide font-semibold  shadow-lg cursor-pointer transition ease-in duration-500">
                         {% if request.session.lang == 'en' %} Proceed  {% else %} এগিয়ে যান {% endif %}
                     </button>
-                    {{ form.subject.errors }}
                 </form>
             </div>
             {% if error %}
@@ -72,7 +117,7 @@
                   </svg>
                   <span class="sr-only">Info</span>
                   <div>
-                    <span class="font-medium"> {{ error }} !</span>
+                    <span class="font-medium"> {{ error }}</span>
                   </div>
             </div>
             {% endif %}
@@ -81,3 +126,58 @@
   </div>
 </div>
 {% endblock %}
+
+
+
+
+
+<!--<label class="input input-bordered flex items-center gap-2">-->
+<!--  <input type="text" class="grow" placeholder="Search" />-->
+<!--  <svg-->
+<!--    xmlns="http://www.w3.org/2000/svg"-->
+<!--    viewBox="0 0 16 16"-->
+<!--    fill="currentColor"-->
+<!--    class="h-4 w-4 opacity-70">-->
+<!--    <path-->
+<!--      fill-rule="evenodd"-->
+<!--      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"-->
+<!--      clip-rule="evenodd" />-->
+<!--  </svg>-->
+<!--</label>-->
+<!--<label class="input input-bordered flex items-center gap-2">-->
+<!--  <svg-->
+<!--    xmlns="http://www.w3.org/2000/svg"-->
+<!--    viewBox="0 0 16 16"-->
+<!--    fill="currentColor"-->
+<!--    class="h-4 w-4 opacity-70">-->
+<!--    <path-->
+<!--      d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />-->
+<!--    <path-->
+<!--      d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />-->
+<!--  </svg>-->
+<!--  <input type="text" class="grow" placeholder="Email" />-->
+<!--</label>-->
+<!--<label class="input input-bordered flex items-center gap-2">-->
+<!--  <svg-->
+<!--    xmlns="http://www.w3.org/2000/svg"-->
+<!--    viewBox="0 0 16 16"-->
+<!--    fill="currentColor"-->
+<!--    class="h-4 w-4 opacity-70">-->
+<!--    <path-->
+<!--      d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />-->
+<!--  </svg>-->
+<!--  <input type="text" class="grow" placeholder="Username" />-->
+<!--</label>-->
+<!--<label class="input input-bordered flex items-center gap-2">-->
+<!--  <svg-->
+<!--    xmlns="http://www.w3.org/2000/svg"-->
+<!--    viewBox="0 0 16 16"-->
+<!--    fill="currentColor"-->
+<!--    class="h-4 w-4 opacity-70">-->
+<!--    <path-->
+<!--      fill-rule="evenodd"-->
+<!--      d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"-->
+<!--      clip-rule="evenodd" />-->
+<!--  </svg>-->
+<!--  <input type="password" class="grow" value="password" />-->
+<!--</label>-->
