--- a/templates/reset.html
+++ b/templates/reset.html
@@ -23,7 +23,11 @@
         </div>
         <div class="flex flex-row text-sm font-medium text-black-400">
           <p>
-            {% if request.session.lang == 'en' %} We will send a code to the provided number. {% else %} আমরা আপনার নাম্বারে একটি কোড পাঠাবো। দয়া করে সঠিক কোডটি এখানে বসান। {% endif %} {{ request.session.number }}
+            {% if request.session.lang == 'en' %}
+              We will send a code to the provided number.
+            {% else %}
+              আমরা আপনার নাম্বারে একটি কোড পাঠাবো। দয়া করে সঠিক নাম্বার এখানে বসান।
+            {% endif %} {{ request.session.number }}
           </p>
         </div>
       </div>
@@ -34,11 +38,13 @@
           <div class="flex flex-col mt-3 space-y-5">
             <div class="flex flex-col gap-5 items-center justify-between mx-auto w-full max-w-xs">
 
-               <div class="h-10 flex flex-row  w-full gap-2  px-5 ">
-                 {{ form.number }}
-<!--                    <input name="number" maxlength="15" minlength="12" required placeholder="+88017********"-->
-<!--                       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"-->
-<!--                       type="tel" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="number">-->
+               <div class="h-14 mb-2">
+<!--                 {{ form.number }}-->
+                    <input name="username" maxlength="15" minlength="12" required placeholder="+88017********"
+                       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                       type="tel" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="number">
+                    <p class="text-sm text-gray px-2">Country code is necessary. </p>
+
                 </div>
                 <div class="h-12">
                     <input name="password" maxlength="6" required placeholder="Password"
