--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         {% if config.video %}
         <div class="flex justify-center w-full rounded-3xl">
             <video src="{{config.video.url}}"
-                 class="h-fit w-2/3 rounded-2xl lg:w-[35vw]"
+                 class="h-fit w-2/3 rounded-2xl lg:w-[35vw] aspect-video"
                  title=""
                  autoplay loop muted playsinline controls
             > </video>
@@ -32,26 +32,42 @@
         <!-- course cards -->
         <div id="courses" class="grid grid-cols-1 lg:grid-cols-2 gap-1 mt-2">
           <!-- card -->
-            {% for course in courses %}
-            <div class="card bg-gray-800 shadow-md p-2 pb-10 mx-5 mb-5">
+            {% for course_info in courses %}
+            <div class="card bg-gray-800 shadow-md p-2 pb-8 mx-4 mb-5">
+                <img class="h-24 max-w-full mx-auto" src="{{ course_info.course.thumbnail.url }}" alt="image description">
 
-                <img class="h-auto max-w-full mx-auto" src="{{ course.thumbnail.url }}" alt="image description">
-                
-                <div class="card-body items-center text-center p-0 mt-4">
+                <div class="card-body items-center text-center p-0 mt-2">
                   <div class="relative">
-                    <h2 class="card-title text-title-text text-2xl">{{ course.title }}</h2>
-                    {% if course.is_free %}
+                    <h2 class="card-title text-title-text text-2xl">{{ course_info.course.title }}</h2>
+                    {% if course_info.course.is_free %}
                           <p class="text-red-400 text-base absolute top-0 -right-10 font-semibold">Free</p>
                      {% endif %}
                     </div>
-                    <p class="text-primary-text">{{ course.deatils }}</p>
-                    <p class="text-primary-text btext-bold">Price: <span class="text-green-500">{{ course.price }}</span> Taka </p>
+                    <p class="text-primary-text">{{ course_info.course.details  }}</p>
+                    <p class="text-primary-text btext-bold">
+                        {% if not course_info.enrolled %}
+                        Price:
+                        <span class="{% if course_info.course.discount > 0 %} line-through text-error {% else %} text-green-500 {% endif %}">
+                            {{ course_info.course.price }}
+                        </span>
+                            {% if course_info.course.discount > 0 %}
+                                <span class="text-green-500"> {{ course_info.discounted_price }}</span>
+                            {% endif %}
+                        Taka
+                        {% else %}
+                        <span class="text-green-400 mb-2">Purchased</span>
+                        {% endif %}
+                    </p>
                     <div class="card-actions bg-navbar-active hover:bg-navbar-hover text-white transition-all ease-in-out duration-200 border-none text-lg px-6 rounded-md py-2">
-                        {% if course.is_free or request.user in course.customers.all %}
-                            <a href="{% url 'course:course' 1 %}" class="text-white">See Course</a>
+                        {% if course_info.course.is_free or course_info.enrolled %}
+                            <a href="{% url 'course:course' course_info.course.id %}" class="text-white">See Course</a>
+                        {% else %}
+                            {% if request.user %}
+                                <a href="{% url 'course:initiate_payment' course_info.course.id %}" class="text-white">Enroll Now</a>
                             {% else %}
-                            <a href="{% url 'home' %}" class="text-white">Enroll Now</a>
-                         {% endif %}
+                                <a href="{% url 'customer:login' %}" class="text-white">Enroll Now</a>
+                            {% endif %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -150,7 +166,7 @@
     </section>
 
   <!-- Payment Section -->
-  <hr class="w-4/5 mb-6 mx-auto">
+  <hr class="w-full m-5 bg-gray-500">
   <section>
     <h3 class="text-title-text text-xl text-center lg:text-2xl font-bold mb-5">
         {% if request.session.lang == 'en' %} Payment Methods {% else %} পেমেন্ট মাধ্যম {% endif %}
@@ -167,6 +183,5 @@
       </a>
     </div>
   </section>
-
 
 {% endblock %}
