--- a/templates/reset.html
+++ b/templates/reset.html
@@ -38,30 +38,57 @@
           <div class="flex flex-col mt-3 space-y-5">
             <div class="flex flex-col gap-5 items-center justify-between mx-auto w-full max-w-xs">
 
-               <div class="h-14 mb-2">
-<!--                 {{ form.number }}-->
-                    <input name="username" maxlength="15" minlength="12" required placeholder="+88017********"
-                       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                       type="tel" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="number">
-                    <p class="text-sm text-gray px-2">Country code is necessary. </p>
-
-                </div>
-                <div class="h-12">
-                    <input name="password" maxlength="6" required placeholder="Password"
-                       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                       type="text" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="password">
-                </div>
+<!--               <div class="h-14 mb-2">-->
+<!--&lt;!&ndash;                 {{ form.number }}&ndash;&gt;-->
+<!--                    <input name="username" maxlength="15" minlength="12" required placeholder="+88017********"-->
+<!--                       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"-->
+<!--                       type="tel" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="number">-->
+<!--                    <p class="text-sm text-gray px-2">Country code is necessary. </p>-->
+<!--                </div>-->
+                <div class="space-y-1 gap-1 py-2 mb-1 flex flex-col">
+                    {% if is_email == True %}
+                        <label class="input input-bordered flex items-center gap-2">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 16 16"
+                            fill="currentColor"
+                            class="h-4 w-4 opacity-70">
+                            <path
+                              d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                            <path
+                              d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+                          </svg>
+                          <input type="email" name="username" required class="grow" placeholder="Email" />
+                        </label>
+                    {% else %}
+                        <label class="input input-bordered flex items-center gap-2">
+                          <p class="font-bold">+880</p>
+                          <input type="tel" maxlength="10" minlength="10" required
+                                 oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                                 name="username" placeholder="Phone Number" />
+                        </label>
+                    {% endif %}
+                        <a href="{% url 'customer:reset' %}?is_email={% if is_email == True %}false{% else %}true{% endif %}"
+                           class="text-sm text-gray-600 font-bold pb-1">
+                            Used  {% if is_email == True %} phone number{% else %} email {% endif %} previously?
+                        </a>
+                    <div class="h-12 mb">
+                        <input name="password" maxlength="6" required placeholder="New Password"
+                           oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                           type="text" class="w-full h-full flex flex-col items-center justify-center text-center px-5 outline-none rounded-xl border border-gray-200 text-lg bg-white focus:bg-gray-50 focus:ring-1 ring-blue-700" id="password">
+                    </div>
+                    <button type="submit" class="flex mt-1 flex-row mt-4 items-center justify-center text-center w-full border rounded-xl outline-none py-3 bg-blue-700 border-none text-white text-sm shadow-sm">
+                      Submit
+                    </button>
                </div>
             </div>
 
             <div class="flex flex-col space-y-3">
               <div>
-                <button class="flex flex-row mt-4 items-center justify-center text-center w-full border rounded-xl outline-none py-3 bg-blue-700 border-none text-white text-sm shadow-sm">
-                  Submit
-                </button>
+
               </div>
             </div>
-          {% if error %}
+                {% if error %}
                 <div class="flex items-center w-65 p-4 mb-4 mt-5 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
                   <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
@@ -69,14 +96,13 @@
                   <span class="sr-only">Info</span>
                   <div>
                     <span class="font-medium"> {{ error }} !</span>
-                </div>
-            </div>
-            {% endif %}
+                </div></div>
+                {% endif %}
+              </div>
           </form>
         </div>
       </div>
     </div>
-  </div>
 </div>
 
 {% endblock %}
