--- a/templates/verification.html
+++ b/templates/verification.html
@@ -59,9 +59,9 @@
                 </button>
               </div>
 
-              <div class="flex flex-row items-center justify-center text-center text-sm font-medium space-x-1 text-gray-500">
-                <p>Didn't recieve code?</p> <a class="flex flex-row items-center text-blue-600" href="http://" target="_blank" rel="noopener noreferrer">Resend</a>
-              </div>
+<!--              <div class="flex flex-row items-center justify-center text-center text-sm font-medium space-x-1 text-gray-500">-->
+<!--                <p>Didn't recieve code?</p> <a class="flex flex-row items-center text-blue-600" href="http:/" target="_blank" rel="noopener noreferrer">Resend</a>-->
+<!--              </div>-->
             </div>
           {% if error %}
             <div class="flex items-center w-65 p-4 mb-4 mt-5 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
