--- a/templates/base.html
+++ b/templates/base.html
@@ -140,18 +140,12 @@
                   </a>
                 </li>
                 <li>
-                  <a
-                    href="{% url 'home' %}#faq"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                  <a href="{% url 'home' %}#faq" class="hover:text-navbar-hover transition-all ease-in-out duration-200">
                     {% if request.session.lang == 'en' %}  FAQ {% else %} জিজ্ঞাসা {% endif %}
                   </a>
                 </li>
-                <li>
-                  <a
-                    href="#contact_us"
-                    class="hover:text-navbar-hover transition-all ease-in-out duration-200">
-                    {% if request.session.lang == 'en' %}  Contact Us {% else %} যোগাযোগ করুন {% endif %}
-                  </a>
+                <li> <a href="#contact_us" class="hover:text-navbar-hover transition-all ease-in-out duration-200">
+                    {% if request.session.lang == 'en' %}  Contact Us {% else %} যোগাযোগ করুন {% endif %} </a>
                 </li>
                 <li>
                   <a
@@ -181,13 +175,14 @@
                     class="hover:text-navbar-hover btn btn-ghost  {% if request.session.lang == 'en' %} text-navbar-active {% endif %} text-sm py-2 pr-2 cursor-pointer rounded-lg transition-all ease-in-out duration-200"
                     >English</a>
             </div>
-
           </div>
-          <div class="h-full relative">
-            <a href="#" class="text-center whitespace-nowrap text-xl absolute top-1 left-0 -translate-x-1.11 translate-y-1">
-              {% if request.session.lang == 'en' %} Vasha Academy {% else %} ভাষা একাডেমী {% endif %}
+
+          <div class="h-full flex flex-row">
+            <a href="{% url 'home' %}" class="text-center block text-black whitespace-nowrap text-xl -translate-x-1.11 translate-y-1">
+              <img src="{% static 'images/logo.jpg' %}" class="rounded-3xl w-8 mb-2 h-fit inline-block"> {% if request.session.lang == 'en' %} Vasha Academy {% else %} ভাষা একাডেমী {% endif %}
             </a>
           </div>
+          
           <div class="">
             {% if request.user.is_authenticated %}
             <div class="relative">
@@ -229,7 +224,7 @@
                 </li>
 
 
-                <li> <div class="w-full h-2px my-2 bg-amber-700"> </div></li>
+                <li> <div class="w-full h-2px my-2 bg-amber-700"> </div> </li>
 
 
                 <li><a href="{% url 'customer:reset' %}"
